styles/styles.css
/* ... */
/*Landing Page*/


.hero-wrap {
	display: flex;
	flex-direction: column;
	height: 90vh;
	margin: auto;
}

.hero::before {
	background-image: url(/images/landing-hero-image.jpg);
	background-size: cover;
	content: "";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: -2;
	opacity: 0.6;
}



.introduction {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-size: 2.2rem;
	line-height: 3rem;
	/*
	ATTEMPT AT ALIGNING LEFT IN MOBILE*/
	padding-left: 9rem;
	text-align: left;

}

.designer-text-big {
	color: #0E0B06;
	font-size: 3rem;
	font-family: 'Major Mono Display', monospace;
	text-transform: uppercase;

}

.designer-text-small {
	color: #0E0B06;
	font-family: 'Major Mono Display', monospace;
	font-size: 2.2rem;
	text-transform: lowercase;
}


.bunk {
	border-radius: 50%;
	max-height: 20rem;
	max-width: 20rem;

}

.project-wrap {
	align-content: center;

	display: flex;
	flex-direction: column;

	margin: 0 auto;
}


.left-wrap {
	display: grid;
	grid-template-columns: 1fr;
	margin: auto;
	padding-bottom: 2.5rem;
	text-align: left;
}


.right-wrap {
	margin: 0;
	padding-bottom: 2.5rem;
	text-align: center;


}


/*Landing Page Project Sections*/

#top-taster {
	background-color: #D2E7EE;
	opacity: 25%;
}

.pinterest-logo {
	display: block;
	margin: 0 auto;

}

.drive-logo {
	display: block;
	margin: 0 auto;
}

.wunderlist-logo {
	display: block;
	margin: 0 auto;
}

.recent-work {
	text-align: center;
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-size: 2rem;
	font-weight: 600;
	text-decoration: underline;
	text-transform: uppercase;
	padding-top: 2.5rem;
	padding-bottom: 2.5rem;
}

.project-name {
	color: #B30000;
	font-family: 'Zilla Slab', serif;
	font-size: 2.4rem;
	font-weight: 600;
	text-align: center;
	text-transform: uppercase;
	padding-top: 2.5rem;
}

.project-explanation {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	padding-bottom: 2.5rem;
	padding-top: 2.5rem;
}


.prototype {
	outside border box-shadow: 0 0 2rem #777777;
}


/*PROJECT CASE STUDY PAGES*/

/*
. {
	background-color: #A6E6FC;
}
*/

.project-case-study {
	margin: auto;
}

.deliverables-list {
	display: grid;
	grid-template-columns: 1fr;
}

.deliver-two {
	padding-top: 2rem;
}

.deliver-three {
	padding-top: 2rem;
}

.deliverables-list li {
	padding-bottom: 1rem;
}



.content-conclusions {
	color: #B30000;
	font-family: 'Zilla Slab', serif;
	font-size: 3.2rem;
	text-transform: lowercase;
	padding-top: 2rem;
}

.section-header {
	color: #B30000;
	font-family: 'Major Mono Display', monospace;
	font-size: 2.5rem;
	padding-bottom: 1rem;
	text-transform: lowercase;
}

.section-questions {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-size: 1.8rem;
	font-weight: 700;
	padding-bottom: 1rem;
	padding-top: 2rem;
	text-transform: lowercase;
}

.body-list-headers {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-size: 2.2rem;
	font-weight: 600;
	padding-bottom: 1rem;
	padding-top: 1rem;

}

.list-answers {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-weight: 400;
	font-size: 1.8rem;


}

.performed {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-size: 1.8rem;

}

.products {
	color: #0e0b06;
	font-family: 'Zilla Slab', serif;
	font-size: 2rem;
	text-align: center;
	padding-bottom: 2rem;
}

.market-products {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	text-align: center;

}

.survey-responses-one {
	padding-top: 1rem;
}


.survey-responses-two {}

.survey-responses-three {}

.swot-button-center {
	text-align: center;
}


.persona-wrap {
	/*
	display: grid;
	grid-template-columns: 1fr;
	text-align: center;
*/
	/*	tablet below */

	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}



.persona-one,
.persona-two,
.persona-three {
	box-shadow: inset 0 0 10px #777777;
	flex: 1;
}


.persona-three {
	flex: 100%;
}

.persona-name {
	color: #B30000;
	font-family: 'Zilla Slab', serif;
	font-size: 3rem;
	text-align: left;
	text-transform: capitalize;
	padding-bottom: 1rem;
	padding-top: 2rem;

}

.persona-text {
	color: #0e0b06;
	font-family: 'Zilla Slab', serif;
	font-size: 2.1rem;
	padding: 0 2rem;
	text-align: left;
}


.charts {
	background-color: white;
	max-height: 50%;
	max-width: 50%;
	margin: 2rem auto;

}

.sitemap {
	/*	box-shadow: inset 0 0 10rem #777777;*/
	align-content: center;
	justify-content: center;
}

.previous-attempts {
	display: block;
	margin: 0 auto;
}

.final-styleguide-logo {
	text-align: center;
	padding-bottom: 2.5rem;
}

.final-fonts {
	display: flex;
	flex-direction: column;
}

.logo-stack-one {
	padding-bottom: 1rem;
}

.logo-stack-two {
	padding-bottom: 1rem;
}

.logo-stack-three {
	text-align: left;
}

.wine-colors {
	display: block;
	margin: 0 auto;
}

.picture-explanation {
	font-size: 2rem;
	font-weight: 500;
	text-transform: uppercase;
}

.picture-italics {
	font-style: italic;
}

.picture-explanation-center {
	text-align: center;
}

.wireframe-labels {
	color: #0E0B06;
	font-family: 'Zilla Slab', serif;
	font-size: 2rem;
	padding-bottom: 2.5rem;
	padding-top: 5rem;
	text-align: center;
	text-transform: uppercase;
}

.button-center {
	text-align: center;
}


.image-center {
	display: flex;
	flex-direction: column
}

.wireframes {
	/*	box-shadow: 0 0 10px #777777;*/
	display: grid;
	grid-template-columns: 1fr;
	margin: 2rem auto;
}

img .wireframes {
	margin: 0 auto;
}

.flow-charts {
	display: block;
	/*	border: .1rem solid black;*/
	margin-left: auto;
	margin-right: auto;
	padding-top: 1rem;
	padding-bottom: 1rem;
}

.lofi-wireframes {
	display: flex;
	flex-direction: column;
	flex-grow: 1rem;
}


.hifi-wireframes {
	display: grid;
	grid-template-columns: 1fr;
	justify-content: center;
}


.landing-pictures {
	display: flex;
	flex-direction: column;


}

.landing-options {
	display: grid;
	grid-template-columns: 1fr;
	justify-content: space-around;
}


.logo-options {
	display: flex;
	flex-direction: column;
	justify-content: space-around;

}
/* ... */

